Add rich text editor and enhanced features

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#6366f1" />
-    <meta name="description" content="Beautiful notes app with CRUD operations" />
+    <meta name="description" content="Beautiful notes app with rich text formatting" />
     <title>My Notes App</title>
   </head>
   <body>
